creating BE api to searach for areas - WIP. May not be needed anyways. Checking in as backup
